--- a/style.css
+++ b/style.css
@@ -36,3 +36,9 @@ body {
 .main h2 {
 	font-size: 24px;
 	margin-top:
+img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
