--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,11 @@ body {
 
 .container {
 	max-width: 800px;
-	margin: 0 auto;
+	size: A4 portrait;
+	margin-left: 2cm;
+	margin-top: 2cm;
+	margin-right: 2cm;
+	margin-bottom: 2cm;
 	background-color: #FFFFFF;
 	padding: 20px;
 	overflow: auto;
