--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
 	size: A4 portrait;
 	background-color: #FFFFFF;
 	padding: 20px;
+	align: center;
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 
