--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,10 @@ body {
 	background-color: #FFFFFF;
 	padding: 20px;
 	align: center;
+	margin-left: 2cm;
+	margin-top: 2cm;
+	margin-right: 2cm;
+	margin-bottom: 2cm;
 	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 
